All front user session management finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+
 <router-outlet></router-outlet>
+
+<footer>
+  <div class="footer-content">
+    <p>JDStreetWear © 2024</p>
+    <p>Contact us: info@jdstreetwear.com</p>
+  </div>
+</footer>
