--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,26 @@
+<div class="navbar">
+  <div class="navbar-left">
+    <button class="btn active" routerLink="/admin-dashboard">HOME</button>
+</div>
+</div>
+<div class="navbar-center">
+  <img src="assets/jdstreetwear.png" alt="Logo" class="title-logo" style="height: 150px;">
+</div>
+
+<h1 class="page-title" style="margin-top: 7%;">What is JDStreetWear?</h1>
+<div style=" ">
+<p class="description" style="margin-top: 5px;margin-left: 20%;">
+  JDStreetwear is your go-to shop for the trendiest sweatshirts and t-shirts. 
+  We offer a wide variety of styles to keep you looking fresh and dressing to the latest trends.
+</p></div>
+
 <div class="container text-center mt-5">
-    <div class="form-container">
-      <h1>JDStreetWear</h1>
-      <p>What is JDStreetWear?</p>
-      <div class="mt-4">
-        <button class="btn btn-primary mx-2" routerLink="/login">Login</button>
-        <button class="btn btn-secondary mx-2" routerLink="/signin">Sign In</button>
-      </div>
+  <div class="form-container">
+    <h1 class="main-title">Welcome!</h1>
+    <p class="description">What do you want to do?</p>
+    <div class="button-group mt-4">
+      <button class="btn btn-primary mx-2" routerLink="/login">Login</button>
+      <button class="btn btn-secondary mx-2" routerLink="/signin">Sign In</button>
     </div>
   </div>
-  
+</div>
