--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,25 +1,33 @@
-<div class="container">
-    <div class="form-container">
-      <h2>Sign In</h2>
-      <form (ngSubmit)="register()">
-        <div class="form-group">
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" [(ngModel)]="user.firstName" name="firstName" class="form-control" required autocomplete="given-name">
-        </div>
-        <div class="form-group">
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" [(ngModel)]="user.lastName" name="lastName" class="form-control" required autocomplete="family-name">
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" [(ngModel)]="user.email" name="email" class="form-control" required autocomplete="email">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" [(ngModel)]="user.password" name="password" class="form-control" required autocomplete="new-password">
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-      </form>
-    </div>
+<div class="navbar">
+  <div class="navbar-left">
+    <button class="btn active" routerLink="/home">HOME</button>
   </div>
-  
+  </div>
+    <div class="navbar-center">
+      <img src="assets/jdstreetwear.png" alt="Logo" class="title-logo">
+    </div>
+
+<div class="container-signIn">
+  <div class="form-container">
+    <h2 class="form-title">Sign In</h2>
+    <form (ngSubmit)="register()">
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input type="text" id="firstName" [(ngModel)]="user.firstName" name="firstName" class="form-control" required autocomplete="given-name">
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input type="text" id="lastName" [(ngModel)]="user.lastName" name="lastName" class="form-control" required autocomplete="family-name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" [(ngModel)]="user.email" name="email" class="form-control" required autocomplete="email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" [(ngModel)]="user.password" name="password" class="form-control" required autocomplete="new-password">
+      </div>
+      <button type="submit" class="btn">Register</button>
+    </form>
+  </div>
+</div>
