--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,235 @@
-/* You can add global styles to this file, and also import other style files */
+/* {
+  border: 1px solid red;
+}*/
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(40vh - 30px);
+}
+
+.container-signIn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(80vh - 30px);
+}
+
+.form-title {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: #007BFF;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  text-align: left; 
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #333;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 10px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.form-container {
+  width: 300px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.main-title {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: #007BFF;
+}
+
+.description {
+  font-size: 1.2em;
+  color: #555;
+}
+
+.button-group {
+  margin-top: 20px;
+}
+
+button {
+  background-color: #007BFF;
+  color: white;
+  padding: 10px 20px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button.btn-secondary {
+  background-color: #6c757d;
+}
+
+button.btn-secondary:hover {
+  background-color: #5a6268;
+}
+
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #007BFF;
+  color: white;
+}
+
+.navbar-left {
+  display: flex;
+}
+
+.navbar-left .btn {
+  margin-right: 10px;
+  background-color: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+}
+
+.navbar-left .btn:hover,
+.navbar-left .btn.active {
+  background-color: #0056b3;
+  border-radius: 5px;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-right .btn-logout {
+  margin-left: 10px;
+  background-color: #ff4c4c;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.navbar-right .btn-logout:hover {
+  background-color: #ff1a1a;
+}
+
+.user-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+}
+
+.navbar-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.title-logo {
+  height: 150px;
+}
+
+.center-logo {
+  height: 110px; 
+  background-color: #007BFF;
+}
+
+.page-title {
+  text-align: center;
+  font-size: 2.5em;
+  margin-top: 60px;
+  color: #007BFF;
+}
+
+
+.dashboard-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(80vh - 190px);
+}
+
+.dashboard-item {
+  margin: 0 20px;
+  text-align: center;
+  cursor: pointer;
+  border: 2px solid #007BFF;
+  border-radius: 15px;
+  padding: 10px;
+  transition: transform 0.3s ease;
+}
+
+.dashboard-item:hover {
+  transform: scale(1.05);
+}
+
+.icon {
+  width: 300px;
+  height: auto;
+}
+
+.icon-text {
+  font-size: 1.5em;
+  color: #007BFF;
+}
+
+footer {
+  background-color: #007BFF;
+  padding: 10px 0;
+  text-align: center;
+  color: white;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+}
+
+
+.mt-4 {
+  margin-top: 1.5rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
