--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <div class="navbar-left">
-      <button class="btn active" routerLink="/employee-dashboard">Dashboard</button>
-      <button class="btn" routerLink="/products">Products</button>
+      <button class="btn" routerLink="/employee">Dashboard</button>
+      <button class="btn active" routerLink="/products">Products</button>
       <button class="btn" routerLink="/orders">Orders</button>
       <button class="btn" routerLink="/discounts">Discounts</button>
     </div>
@@ -52,12 +52,12 @@
             </ng-container>
           </td>
           <td>
-            <button (click)="editProduct(product)">Edit</button>
-            <button (click)="deleteProduct(product.id)">Delete</button>
+            <button (click)="editProduct(product)"class="button-CRUD"><img src="assets/edit.png" alt="Edit"></button>
+            <button (click)="deleteProduct(product.id)"class="button-CRUD"><img src="assets/delete.png" alt="Delete"></button>
           </td>
         </tr>
       </tbody>
     </table>
-    <button (click)="addProduct()">Add Product</button>
+    <button (click)="addProduct()" class="button-add"><img src="assets/add.png" alt="Add"></button>
   </div>
   
